--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div id="piano"></div>
-    <p>Source: <a href="https://github.com/alan7458/midi-piano">https://github.com/alan7458/midi-piano</a></p>
+    <p>Source: <a href="https://github.com/imalanmyers/midi-piano">https://github.com/imalanmyers/midi-piano</a></p>
     <script src="jquery.min.js"></script>
     <script src="main.js"></script> 
 </body>
